[package]
edition = "2021"
name = "redis_serde_json"
version = "0.1.0"
authors = ["Naitik Shah <n@daaku.org>", "Cris Liao <clia@163.com>"]
description = "A derive to store and retrieve JSON values in redis encoded using serde."
license = "BSD"

[lib]
proc-macro = true

[dependencies.quote]
version = "1.0"

[dependencies.syn]
version = "1.0"
